# qwerty

config/: tmux.conf  vimrc
cpp/examples/: move.cpp
cpp/examples/hackerrank/: fraudulent_activity_notification.cpp
cpp/examples/hash/: hash.cpp
cpp/examples/templates/: a.out  pointer_template.cpp
cpp/imc/: ConcurrentQueue.cpp  ConcurrentQueue2.cpp
cpp/imc/rps/: CMakeLists.txt
cpp/imc/rps/include/: ComputerPlayer.hpp  ConsoleReader.hpp  ConsoleWriter.hpp  HumanPlayer.hpp  IPlayer.hpp  IReader.hpp  IWriter.hpp  RPSApp.hpp
cpp/imc/rps/src/: ComputerPlayer.cpp  ConsoleReader.cpp  ConsoleWriter.cpp  HumanPlayer.cpp  RPS.cpp  RPSApp.cpp
cpp/imc/rps/test/: RPSTest.cpp  RPSTest.hpp  main.cpp
cpp/os/: Makefile  README.md
cpp/os/include/: connection.hpp  cparecord.hpp  marketserver.hpp  service.hpp  session.hpp  tcpclient.hpp  tcpserver.hpp
cpp/os/scripts/: get_most_liquid.sh
cpp/os/src/: connection.cpp  cparecord.cpp  main.cpp  marketclient.cpp  marketserver.cpp  service.cpp  session.cpp  tcpclient.cpp  tcpserver.cpp
cpp/psafe/: CMakeLists.txt  README.md
cpp/psafe/include/: ConsoleView.hpp  DecisionTreeModel.hpp  GamePresenter.hpp  ModelInterface.hpp  PresenterInterface.hpp  ViewInterface.hpp
cpp/psafe/src/: ConsoleView.cpp  DecisionTreeModel.cpp  GameApp.cpp  GamePresenter.cpp
cpp/psafe/test/: GameTest.hpp  main.cpp
cpp/tradeweb/: OrderCache.cpp  OrderCache.h  OrderCacheTest.cpp  ReadMe
cpp/waes/: Makefile  README.md
cpp/waes/include/: dummy_method.hpp  hamming_method.hpp  hamming_method_str.hpp  idistance_method.hpp
cpp/waes/src/: dummy_method.cpp  hamming_method.cpp  hamming_method_str.cpp  main.cpp
cpp/waes/test/: dummy_method_test.cpp  dummy_method_test.hpp  hamming_method_str_test.cpp  hamming_method_str_test.hpp  hamming_method_test.cpp  hamming_method_test.hpp  it  test_main.cpp
py/count_points/: .credentials  count_points
scripts/: setup_openfortivpn
